--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ include_dir = "0.7"
 chrono = "0.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+image = "0.24"
 rfd = "0.14"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
