--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "memory-pak"
 version = "0.1.0"
 edition = "2021"
-authors = ["Memory Pak"]
+authors = ["Aspenini"]
 
 [dependencies]
 egui = "0.27"
