--- a/site/manifest.json
+++ b/site/manifest.json
@@ -8,28 +8,28 @@
   "theme_color": "#00ff00",
   "icons": [
     {
-      "src": "../icons/web/favicon.ico",
+      "src": "/icons/web/favicon.ico",
       "type": "image/x-icon",
       "sizes": "16x16 32x32"
     },
     {
-      "src": "../icons/web/icon-192.png",
+      "src": "/icons/web/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "../icons/web/icon-512.png",
+      "src": "/icons/web/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "../icons/web/icon-192-maskable.png",
+      "src": "/icons/web/icon-192-maskable.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "maskable"
     },
     {
-      "src": "../icons/web/icon-512-maskable.png",
+      "src": "/icons/web/icon-512-maskable.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
