--- a/site/manifest.json
+++ b/site/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#00ff00",
   "icons": [
     {
-      "src": "/icons/web/favicon.ico",
+      "src": "/img/favicon.ico",
       "type": "image/x-icon",
       "sizes": "16x16 32x32"
     },
