--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,11 @@ name = "memory_pak"
 path = "src/main.rs"
 
 [dependencies]
-egui = "0.27"
-eframe = "0.27"
+egui = "0.33.3"
+eframe = "0.33.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-directories = "5.0"
+directories = "6.0"
 include_dir = "0.7"
 chrono = "0.4"
 unicode-normalization = "0.1"
@@ -35,10 +35,11 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
     "Window", "Document", "Element", "HtmlInputElement",
-    "FileReader", "FileList"
+    "FileReader", "FileList", "Url", "Blob", "HtmlElement"
 ] }
 js-sys = "0.3"
 console_error_panic_hook = "0.1"
+wasm-logger = "0.2"
 getrandom = { version = "0.2", features = ["js"] }
 
 [profile.release]
