--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
     "Window", "Document", "Element", "HtmlInputElement",
-    "FileReader", "FileList", "Url", "Blob", "HtmlElement"
+    "FileReader", "FileList", "Url", "Blob", "HtmlElement",
+    "Performance", "Storage", "HtmlCanvasElement", "console"
 ] }
 js-sys = "0.3"
 console_error_panic_hook = "0.1"
